learn file-sql read python/Django.txt
django install:

youtube video: 
https://www.youtube.com/watch?v=zuxzE7--RYM


Microsoft Windows [Version 10.0.18363.1316]
(c) 2019 Microsoft Corporation. All rights reserved.

C:\Users\DELL\PycharmProjects\Webproject>pip install django
Defaulting to user installation because normal site-packages is not writeable
Collecting django
  Downloading Django-3.1.6-py3-none-any.whl (7.8 MB)
     |7.8 MB 3.3 MB/s
Collecting asgiref<4,>=3.2.10
  Downloading asgiref-3.3.1-py3-none-any.whl (19 kB)
Requirement already satisfied: pytz in c:\users\dell\appdata\roaming\python\python39\site-packages (from django) (2020.5)
Collecting sqlparse>=0.2.2
  Downloading sqlparse-0.4.1-py3-none-any.whl (42 kB)
     |42 kB 1.6 MB/s
Installing collected packages: asgiref, sqlparse, django
  WARNING: The script sqlformat.exe is installed in 'C:\Users\DELL\AppData\Roaming\Python\Python39\Scripts' which is not on PATH.
  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.
  WARNING: The script django-admin.exe is installed in 'C:\Users\DELL\AppData\Roaming\Python\Python39\Scripts' which is not on PATH.
  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.
Successfully installed asgiref-3.3.1 django-3.1.6 sqlparse-0.4.1
WARNING: You are using pip version 20.2.3; however, version 21.0.1 is available.
You should consider upgrading via the 'c:\program files\python39\python.exe -m pip install --upgrade pip' command.



C:\Users\DELL\PycharmProjects\Webproject>pip uninstall Django
Found existing installation: Django 3.1.6
Uninstalling Django-3.1.6:
  Would remove:
    c:\users\dell\appdata\roaming\python\python39\scripts\django-admin.exe
    c:\users\dell\appdata\roaming\python\python39\scripts\django-admin.py
    c:\users\dell\appdata\roaming\python\python39\site-packages\django-3.1.6.dist-info\*
    c:\users\dell\appdata\roaming\python\python39\site-packages\django\*


updated django.admin.exe in C:\Program Files\Python39\Scripts and added this to path in environment variables.
And then restarted the computer. This is where python is installed.

C:\Users\DELL\PycharmProjects\Webproject>django-admin startproject webp

run server now:
C:\Users\DELL\PycharmProjects\Webproject\webp>python manage.py runserver
Watching for file changes with StatReloader
Performing system checks...

System check identified no issues (0 silenced).

You have 18 unapplied migration(s). Your project may not work properly until you apply the migrations for app(s): admin, auth, contenttypes, sessions.
Run 'python manage.py migrate' to apply them.
February 02, 2021 - 22:38:51
Django version 3.1.6, using settings 'webp.settings'
Starting development server at http://127.0.0.1:8000/
Quit the server with CTRL-BREAK.


http://127.0.0.1:8000/  is the webaddress for your website now.

now press ctrl + C.

now create app file also using below command
C:\Users\DELL\PycharmProjects\Webproject\webp>python manage.py startapp webapp

--------


now update views.py(In webapp) and write some code there.
to connect views.py to webp - urls.py, we need to create new urls.py in webapp.

now update webapp-urls.py with some data from webp-urls.py 
connect webapp.urls and webapp.views to webp.urls by writing some code in both.

now run command again-- python manage.py runserver 

C:\Users\DELL\PycharmProjects\Webproject\webp>python manage.py runserver
Watching for file changes with StatReloader
Performing system checks...

Exception in thread django-main-thread:
Traceback (most recent call last):
  File "C:\Program Files\Python39\lib\threading.py", line 954, in _bootstrap_inner
    self.run()
  File "C:\Program Files\Python39\lib\threading.py", line 892, in run
    self._target(*self._args, **self._kwargs)
  File "C:\Users\DELL\AppData\Roaming\Python\Python39\site-packages\django\utils\autoreload.py", line 53, in wrapper
    fn(*args, **kwargs)
  File "C:\Users\DELL\AppData\Roaming\Python\Python39\site-packages\django\core\management\commands\runserver.py", line 118, in inner_run
    self.check(display_num_errors=True)
  File "C:\Users\DELL\AppData\Roaming\Python\Python39\site-packages\django\core\management\base.py", line 392, in check
    all_issues = checks.run_checks(
  File "C:\Users\DELL\AppData\Roaming\Python\Python39\site-packages\django\core\checks\registry.py", line 70, in run_checks
    new_errors = check(app_configs=app_configs, databases=databases)
  File "C:\Users\DELL\AppData\Roaming\Python\Python39\site-packages\django\core\checks\urls.py", line 13, in check_url_config
    return check_resolver(resolver)
  File "C:\Users\DELL\AppData\Roaming\Python\Python39\site-packages\django\core\checks\urls.py", line 23, in check_resolver
    return check_method()
  File "C:\Users\DELL\AppData\Roaming\Python\Python39\site-packages\django\urls\resolvers.py", line 408, in check
    for pattern in self.url_patterns:
  File "C:\Users\DELL\AppData\Roaming\Python\Python39\site-packages\django\utils\functional.py", line 48, in __get__
    res = instance.__dict__[self.name] = self.func(instance)
  File "C:\Users\DELL\AppData\Roaming\Python\Python39\site-packages\django\urls\resolvers.py", line 589, in url_patterns
    patterns = getattr(self.urlconf_module, "urlpatterns", self.urlconf_module)
  File "C:\Users\DELL\AppData\Roaming\Python\Python39\site-packages\django\utils\functional.py", line 48, in __get__
    res = instance.__dict__[self.name] = self.func(instance)
  File "C:\Users\DELL\AppData\Roaming\Python\Python39\site-packages\django\urls\resolvers.py", line 582, in urlconf_module
    return import_module(self.urlconf_name)
  File "C:\Program Files\Python39\lib\importlib\__init__.py", line 127, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1030, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1007, in _find_and_load
  File "<frozen importlib._bootstrap>", line 986, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 680, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 786, in exec_module
  File "<frozen importlib._bootstrap_external>", line 923, in get_code
  File "<frozen importlib._bootstrap_external>", line 853, in source_to_code
  File "<frozen importlib._bootstrap>", line 228, in _call_with_frames_removed
  File "C:\Users\DELL\PycharmProjects\Webproject\webp\webp\urls.py", line 21
    path('',include ('webapp.urls)),
                                    ^
SyntaxError: EOL while scanning string literal

C:\Users\DELL\PycharmProjects\Webproject\webp>

create html page in templates/webapp folder
connect apps.py(webapp) to setting.py(webp) by updating webapp.apps.WebappConfig
now user render fucnation in views.py
now add table details in hi.html page and runserver
website is ready -- http://127.0.0.1:8000/



################################################

https://www.youtube.com/watch?v=WDEyt2VHpj4
https://www.youtube.com/watch?v=vR5utJvN4JY

pip3 install msql-connector

cretae database in sql:
databse in mysql:
#show databases;
#Create database accounts;
use accounts;
#create table Account_new (name varchar(20), number int(10));
#insert into account_new values ('Ankur','1');
#select * from account_new;
#create table account_new1 (Name varchar(10) DEFAULT NULL);
#insert into account_new1 values ('Ankur');
select * from account_new1 limit 0,1000;


